--- a/scss/main.css
+++ b/scss/main.css
@@ -42,9 +42,10 @@ body {
 
 .story__pictures {
   background-color: #c69963; }
-
 .story__content {
   background-color: #f9f7f6; }
 
 .homes {
   background-color: #101d2c; }
+
+/*# sourceMappingURL=main.css.map */
